#3 Fix: Changed sidebar width, changed sidebar collapse on smaller screens

--- a/style/layout.css
+++ b/style/layout.css
@@ -1,16 +1,12 @@
 .app {
   display: grid;
-  grid-template-columns: 270px 1fr;
+  grid-template-columns: 280px 1fr;
   /* TODO: Delete border after layout is approved. Border has presentational purpose */
   border: 1px solid;
 }
 
 @media (max-width: 992px) {
   .app {
-    grid-template-columns: 1fr;
-  }
-
-  .sidebar {
-    display: none;
+    grid-template-columns: 80px 1fr;
   }
 }
